--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,10 @@
+wsproxy (1.2-1KUMIRELEASE1) unstable; urgency=low
+
+  * Massively cleanup source code.
+  * Improve transmission buffer sizes.
+
+ -- Ed Schouten <ed@kumina.nl>  Thu, 20 Oct 2011 21:25:51 +0200
+
 wsproxy (1.1-1KUMIRELEASE1) unstable; urgency=low
 
   * Add support for HyBi-10.
